@@ -1,0 +1,200 @@
+
+password1
+abc123
+fuckyou
+monkey1
+iloveyou1
+fuckyou1
+i
+password
+number1
+football1
+nicole1
+123456
+iloveyou2
+123abc
+princess1
+bubbles1
+blink182
+babygirl1
+123456a
+qwerty1
+jordan1
+iloveyou
+fuck
+bitch
+asshole
+password2
+michael1
+love123
+soccer1
+hockey1
+fuckyou2
+anthony1
+poohbear1
+justin1
+iloveyou!
+greenday1
+fuckyou!
+snoopy1
+password3
+chocolate1
+cheese1
+charlie1
+a123456
+soccer2
+orange1
+loser1
+liverpool1
+jordan23
+jesus1
+iloveyou.
+cookie1
+bitch1
+baseball1
+ballin1
+ashley1
+amanda1
+tigger1
+summer1
+shadow1
+qwerty12
+password!
+nigger1
+loveyou1
+iloveu1
+friends1
+forever1
+computer1
+chicken1
+carmen1
+babygurl1
+1qwerty
+yankees1
+william1
+tweety1
+taylor1
+superman1
+shorty1
+scooby1
+password.
+passw0rd
+panda1
+nirvana1
+matthew1
+marie1
+loveme1
+joshua1
+iloveyou3
+hollister1
+hello1
+green1
+fuckoff
+fluffy1
+faggot
+elizabeth1
+chocolate!
+brandon1
+batman1
+12345a
+yellow1
+whatever1
+victoria1
+trustno1
+tigger
+sunshine1
+spongebob1
+soccer14
+simba1
+red123
+orlando1
+michelle1
+loser
+kisses1
+joseph1
+jimmy1
+jessica1
+freedom1
+football2
+element1
+dragon1
+david1
+chris1
+charlotte1
+cameron1
+butterfly1
+buster1
+bowwow1
+bailey1
+andrew1
+50cent
+123qwe
+whatever
+weed420
+water1
+sweet16
+stupid1
+steven1
+steelers1
+soccer8
+soccer4
+soccer13
+slipknot1
+single1
+sidekick3
+ronaldo7
+rocky1
+puppy1
+pimpin1
+penis1
+peanut1
+password4
+panic!
+noodles1
+muffin1
+mother1
+monkey2
+money1
+money$
+mommy1
+loveu2
+lover1
+lovely1
+love22
+love12
+killer1
+jasper1
+iverson3
+internet1
+iloveu2
+hottie1
+hannah1
+google1
+george1
+gangsta1
+fuckyou.
+fucku
+fuck
+elephant1
+disney1
+cutiepie1
+cunt
+cookies1
+compaq1
+candy1
+bubble1
+booboo1
+baseball3
+banana1
+babyboy1
+asdf1234
+asd123
+angels1
+angel1
+andrew
+aaliyah1
+1password
+1234abcd
+
+zxcvbnm1
+young1
